0.99.9.1

* Themes should now be working properly.
* Updated Steam feed URL.
* LOTS of localization updates. Most languages will now be out of date on labels.

0.99.9.0

* Fixed an issue with add_option that was resetting all options.
* Lots of code cleanup to get rid of warnings when WP_DEBUG is defined.
* Refactored label classes into base verb classes. They should now be extended rather than the base class.
* Added an option to open links in a new window.
* [#] links are now replaced with [username] where applicable.

0.99.8.9

* All functions are now namespaced.

0.99.8.8

* Added reset database function.
* Fixed some issues with options and their defaults.
* Added Extension directories to maintenance page.
* Fixed feed URL for when permalinks are enabled.

0.99.8.7

* Updated compatibility.
* Added Catalan localization from Benjamí Villoslada.

0.99.8.6

* Fixed an error with a reserved word causing a Fatal Error for some users.

0.99.8.5

* Improved Raptr extension.
* Improved DeviantArt extension.
* Pagination is now available when using [lifestream].
* Added settings for additional extension, icon, and theme directories.
* Cleaned up settings page.
* Possible fix for bad interval on lifestream update.

0.99.8.4

* Fixed an issue created in 0.99.8.3 with yield_many().

0.99.8.3

* ID fixes for expanding events.
* Added a yield_many() method to LifeStream_Extension. See included raptr extension for usage.
* Added Raptr feed for tracking played games and achievements.
* Fixed an issue with the Errors page.
* Updated German localization.

0.99.8.2

* Added Swedish translation from Jens Wedin.
* Fixed expand toggle links.
* Removed $id global from theme templates.
* Fixed url encoding on Twitter passwords.

0.99.8.1

* Introduced icon packs.
* Fixed a bug with icons on the errors panel.
* Cleaned up some admin panels UI and design.
* get_icon_url() will now fall back on generic.png if icon is not present.

0.99.8.0
